# dope-jobs-pipeline

./: .gitignore  AGENTS.md  ATS_GAPS.md  GEO_SEARCH_PLAN.md  INDUSTRY_TAXONOMY_PLAN.md  JOBPOSTING_SCHEMA_AUDIT.md  README.md  backfill_public_identity.py  batch_parse.py  codex_clean_call_eval.py  codex_clean_call_parse.py  companies.smoke.txt  companies.txt.gpg  company_logos.py  db.py  detect_boilerplate.py  fx_rates.py  geo_places.py  geo_resolve_jobs.py  geo_resolver.py  job_groups.py  job_recommendations.py  parse.py  pipeline.py  places_index.py  probe_workable_widget.py  public_ids.py  pyproject.toml  reload_company_docs.py  salary_normalization.py  seed_company_tokens.py  workable.smoke.txt
.github/workflows/: load.yml  pipeline.yml  recommendations.yml  workable-pipeline.yml  workable-widget-smoke.yml
scrapers/: ashby_scraper.py  base_scraper.py  greenhouse_scraper.py  jobvite_scraper.py  lever_scraper.py  workable_scraper.py
tests/: test_batch_parse.py  test_codex_clean_call_eval.py  test_codex_clean_call_parse.py  test_db.py  test_geo_places.py  test_geo_resolver.py  test_greenhouse_scraper.py  test_job_groups.py  test_job_recommendations.py  test_jobvite_scraper.py  test_lever_scraper.py  test_merge_api_data.py  test_pipeline_parse_provenance.py  test_pipeline_sharding.py  test_places_index.py  test_probe_workable_widget.py  test_public_ids.py  test_reload_company_docs.py  test_salary_normalization.py  test_seed_company_tokens.py  test_workable_scraper.py
utils/: __init__.py  func_utils.py  html_utils.py  job_utils.py
